# ESP-Miner-LV07

./: .gitignore  AGENTS.md  config-102.cvs  config-201.cvs  config-202.cvs  config-203.cvs  config-204.cvs  config-205.cvs  config-207.cvs  config-302.cvs  config-303.cvs  config-400.cvs  config-401.cvs  config-402.cvs  config-403.cvs  config-601.cvs  config-602.cvs  config-603.cvs  config-650.cvs  config-701.cvs  config-702.cvs  config-800x.cvs  config-801.cvs  config-custom.cvs  config-lv06.cvs  config-lv07.cvs  config-lv07pro.cvs  config-lv08.cvs  config.cvs.example  readme.md  sdkconfig.defaults
.devcontainer/: Dockerfile
main/: CMakeLists.txt  EMC2302.c  EMC2302.h  Kconfig.projbuild  TMP1075.h  TPS546.c  TPS546.h  device_config.c  device_config.h  display.c  display.h  filesystem.c  filesystem.h  global_state.h  i2c_bitaxe.c  idf_component.yml  input.c  log_buffer.c  log_buffer.h  logo.c  lv_font_portfolio-6x8.c  main.c  nvs_config.c  nvs_config.h  nvs_device.c  screen.c  screen.h  system.c  system.h  task_monitor.c  task_monitor.h  vcore.c  work_queue.c  work_queue.h
main/TMP1075/: TMP1075_2.c  TMP1075_2.h
main/bap/: bap_handlers.c  bap_protocol.c  bap_protocol.h  bap_readme.md  bap_subscription.c  bap_uart.c
main/http_server/: cjson_utils.c  cjson_utils.h  http_server.c  http_server.h  openapi.yaml  system_api_json.c  system_api_json.h  theme_api.c  theme_api.h  websocket.c  websocket.h  websocket_api.c  websocket_api.h  websocket_log.c  websocket_log.h
main/http_server/axe-os/: .gitignore  README.md  angular.json  karma.conf.js  ng-openapi-gen.json  openapitools.json  package-lock.json  package.json  proxy.conf.js  tsconfig.json
main/http_server/axe-os/src/: index.html  styles.scss  tailwind.css  test-setup.spec.ts
main/http_server/axe-os/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  local-storage.service.ts  prime-ng.module.ts
main/http_server/axe-os/src/app/components/chart/: app-chart.component.ts
main/http_server/axe-os/src/app/components/checkbox/: checkbox.component.ts
main/http_server/axe-os/src/app/components/confetti/: confetti.component.scss  confetti.component.ts
main/http_server/axe-os/src/app/components/design/: design-component.scss  design.component.ts  theme-config.component.html  theme-config.component.ts
main/http_server/axe-os/src/app/components/dropdown/: dropdown.component.spec.ts  dropdown.component.ts
main/http_server/axe-os/src/app/directives/: tooltip.directive.ts
main/http_server/axe-os/src/app/guards/: ap-mode.guard.ts
main/http_server/axe-os/src/app/layout/: app.layout.component.ts  app.layout.module.ts  app.menu.component.ts  app.menuitem.component.html  app.menuitem.component.ts  app.topbar.component.html  app.topbar.component.ts
main/http_server/axe-os/src/app/models/: select-option.model.ts
main/http_server/axe-os/src/app/pipes/: address.pipe.ts  ansi.pipe.ts  byte-suffix.pipe.ts  date-ago.pipe.ts  diff-suffix.pipe.ts  hash-suffix.pipe.ts  sats.pipe.spec.ts  sats.pipe.ts
main/http_server/axe-os/src/app/services/: dashboard-edit.service.ts  dialog.service.ts  github-update.service.spec.ts  github-update.service.ts  live-data.service.ts  loading.service.ts  quicklink.service.ts  system.service.spec.ts  system.service.ts  theme.service.ts
main/http_server/axe-os/src/assets/: share-rejection-explanations.json
main/http_server/axe-os/src/environments/: environment.proxy.ts
main/http_server/axe-os/src/models/: ISystemInfo.ts  ISystemScoreboard.ts  ISystemUpdateResponse.ts
main/http_server/axe-os/src/models/enum/: eChartLabel.ts
main/power/: INA260.c  TPS546.c  TPS546.h  TPS546_LV08.c  TPS546_LV08.h  TPS546_config.h  asic_init.c  power.c  power.h  vcore.c  vcore.h
main/self_test/: self_test.c  self_test.h
main/tasks/: asic_result_task.c  create_jobs_task.c  fan_controller_task.c  fan_controller_task.h  hashrate_monitor_task.c  hashrate_monitor_task.h  power_management_task.c  power_management_task.h  protocol_coordinator.c  protocol_coordinator.h  scoreboard.c  scoreboard.h  statistics_task.c  statistics_task.h  stratum_task.c  stratum_v1_task.c  stratum_v1_task.h  stratum_v2_task.c  stratum_v2_task.h
main/thermal/: EMC2103.c  EMC2103.h  EMC2302.c  EMC2302.h  EMC2302_LV07.c  EMC2302_LV07.h  PID.c  PID.h  TMP1075_LV07.c  TMP1075_LV07.h  thermal.c  thermal.h
main/thermal/TMP1075/: TMP1075_1.c  TMP1075_1.h  TMP1075_2.c  TMP1075_LV07.c  TMP1075_LV07.h
test/: CMakeLists.txt
(+126 files in other folders)
